--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "eslint": "^8",
