--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start",
     "prettier": "prettier --write .",
     "lint": "next lint",
-    "analyze": "ANALYZE=true npm run build"
+    "analyze": "ANALYZE=true npm run build",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "Truong Tuan Loc",
@@ -22,7 +25,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^11.5.6",
-    "next": "14.2.13",
+    "next": "^14.2.35",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
@@ -30,8 +33,14 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^16.0.3",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.6.1",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.4",
+    "glob": "^13.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "sharp": "^0.34.5"
   }
 }
