--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "jura69-homepage",
   "version": "1.0.0",
   "description": "Loc's website",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev -H 0.0.0.0",
-    "build": "next build",
-    "start": "next start",
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "preview": "vite preview",
+    "lint": "eslint src components lib providers --ext .ts,.tsx,.js,.jsx",
     "prettier": "prettier --write .",
-    "lint": "next lint",
-    "analyze": "ANALYZE=true npm run build",
+    "analyze": "vite-bundle-visualizer",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
@@ -18,29 +20,38 @@
   "license": "MIT",
   "dependencies": {
     "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/next-js": "^2.2.0",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^11.5.6",
-    "next": "^14.2.35",
     "react": "^18",
     "react-dom": "^18",
+    "react-helmet-async": "^2.0.4",
     "react-icons": "^5.3.0",
+    "react-router": "^7.0.0",
     "three": "^0.172.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^16.0.3",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.6.1",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "@types/three": "^0.172.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.35",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.0",
     "glob": "^13.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "typescript": "^5.7.0",
+    "vite": "^6.0.0",
+    "vite-tsconfig-paths": "^5.1.0"
   }
 }
